# yolodex

./: .gitignore  AGENTS.md  README.md  SKILL.md  config.json  label_flow_alignment.md  main.py  progress.txt  pyproject.local.toml  pyproject.toml  setup.sh  uv.lock.local  yolodex-doctor.sh  yolodex-run.sh  yolodex-status.sh  yolodex.sh
.agents/skills/augment/: SKILL.md
.agents/skills/collect/: SKILL.md
.agents/skills/eval/: SKILL.md
.agents/skills/label/: SKILL.md
.agents/skills/play/: SKILL.md
.agents/skills/train/: SKILL.md
.agents/skills/yolodex/: SKILL.md
docs/: architecture.md  changelog.md  label_flow_alignment.md  models.md  skills.md  testing-instructions.md  usage.md
labeler/: LABELING_RULES.md  __init__.py  cli.py  defaults.py  frames.py  ingest.py  label_frames.py  label_worker.py  merge.py  rules.py  tasks.py  utils.py  validate.py
landing/: README.md  index.html  package-lock.json  package.json  style.css
landing/public/: site.webmanifest
landing/src/: App.css  App.jsx  index.css
pipeline/: main.py  requirements.txt
ryunzz/codex_agents/: AgentA.md  AgentB.md  AgentC.md
scripts/: doctor.py  status.py
shared/: run_state.py  utils.py
shared/game_bot/: __init__.py  capture.py  config.py  detector.py  input_controller.py  runtime.py  state_machine.py  types.py
team_exports/fruit-ninja-v1/: README.md  classes.txt  manifest.json
team_exports/space-invaders-v1/: classes.txt  dataset.yaml
team_exports/subway-surfers-v1/: README.md  classes.txt  manifest.json
tests/: README.md  test_game_bot_state_machine.py
(+253 files in other folders)
