[project]
name = "yolodex"
version = "0.1.0"
description = "Autonomous YOLO training data generation from gameplay videos"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "yt-dlp>=2024.1.0",
    "ultralytics>=8.0.0",
    "Pillow>=10.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
