[project]
name = "yolodex"
version = "0.1.0"
description = "Autonomous YOLO training data generation from gameplay videos"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "yt-dlp>=2024.1.0",
    "ultralytics>=8.0.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "mss>=9.0.1",
    "pynput>=1.7.7",
]

[project.optional-dependencies]
gemini = ["google-generativeai>=0.5.0"]

[tool.hatch.build.targets.wheel]
packages = ["shared", "pipeline"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
